# Compilador

./: .gitignore  CMakeLists.txt  README.md  makefile  script_projeto.sh
Parser/: arquivo_bison.tab.c  arquivo_bison.tab.h  arquivo_bison.y  arquivo_lex.c  arquivo_lex.l  exec  lex.yy.c  mdc.cm  script.sh  script_parser_lexer.sh
Parser/Backup/: backup_12_12entrada.l
ProjFinal/: .gitignore  Makefile  Teste.cm  arquivo_bison.tab.c  arquivo_bison.tab.h  arquivo_bison.y  arquivo_lex.c  arvore.c  aula.txt  codInterm.c  codInterm.h  copia.txt  entrada.l  global.h  lexer.l  main.c  makefile  mdc.cm  parser.tab.c  parser.y  script_as.sh  script_lexer.sh  script_parser_lexer.sh  script_projeto.sh  semantica.c  semantica.h  sort.cm  tabelaSimb  tabelaSimb.c  tabelaSimb.h  tempCodeRunnerFile.c
ProjFinal/.history/: .gitignore_20230107220602  .gitignore_20230107220648  .gitignore_20230107220657  global_20230107233820.h  main_20230107214152.c  main_20230107220118.c  main_20230107221033.c  main_20230107221059.c  main_20230107221129.c  main_20230107221206.c  main_20230107221421.c  main_20230107221517.c  main_20230107221552.c  main_20230107221637.c  main_20230107221719.c  main_20230107221912.c  main_20230107222118.c  main_20230107222523.c  main_20230107222659.c  main_20230107222726.c  main_20230107222750.c  main_20230107222855.c  main_20230107223010.c  main_20230107223530.c  main_20230107223638.c  main_20230107223648.c  main_20230107223836.c  main_20230107223850.c  main_20230107223922.c  main_20230107223927.c  main_20230107223941.c  main_20230107224325.c  main_20230107224645.c  main_20230107224708.c  main_20230107224925.c  main_20230107224943.c  main_20230107224956.c  main_20230107225111.c  main_20230107225136.c  main_20230107225156.c  (+141 more)
ProjFinal/.history/Arquivos_Testes/: mdc_20230107232717.cm  mdc_20230107232725.cm  mdc_20230107232737.cm  mdc_20230107234430.cm  mdc_20230107234552.cm  mdc_20230107235636.cm  mdc_20230108000853.cm  mdc_20230108001311.cm  mdc_20230108001325.cm  mdc_20230108004142.cm  mdc_20230108004207.cm
ProjFinal/Arquivos_Testes/: Teste.cm  mdc.cm  sort.cm
ProjFinal/Arquivos_Testes/Testes_Semantica/: Teste_1.cm  Teste_4.cm  Teste_6.cm  Teste_7.cm
ProjFinal/Backup/Backup15-12/: arquivo_bison.y  entrada.l
ProjFinal/Backup/Backup19_12/: arquivo_bison.y
ProjFinal/Backup/Backup20_12/: global.h  script_parser_lexer.sh
ProjFinal/Backup/Backup21_12/: arquivo_bison.y  entrada.l  script_parser_lexer.sh
ProjFinal/Backup/backup19_12_v02/: arquivo_bison.y  global.h
ProjFinal/bugs/otimizacao/: codigoIntermediario.txt
ProjFinal/bugs/soma/: assembly copy.c  codAssembly_v01.txt  codAssembly_v02.txt  codAssembly_v03.txt  codAssembly_v04.txt  codAssembly_v05.txt  codAssembly_v06.txt  codAssembly_v07.txt  codAssembly_v08.txt  codAssembly_v09.txt
ProjFinal/include/: assembly.h  binario.h  codInterm.h  global.h  label.h  lexico.h  memoria.h  parser.h  parser.tab.h  tabelaSimb.h
ProjFinal/src/: arquivo_lex.c  arvore.c  assembly.c  binario.c  codInterm.c  copia.txt  funcoes_assembly.c  label.c  lexer.l  main.c  memoria.c  parser.tab.c  parser.y  registradores.c  semantica.c  tabelaSimb.c
ProjFinal/testes/: mdc.cm  sort.cm  testeIf.cm  testeVetor.cm
ProjFinal/testes/assembly/: fatorial_iterativo.cm  fatorial_recursivo.cm  fatorial_recursivo_vetor.cm  fibonacci.cm  soma.cm  soma_funcao.cm  vetor.cm
ProjFinal/testes/linguagemC/: fatorial_iterativo  gcd
ProjFinal/testes/semantica/: teste_3.cm
Scanner/: entrada.l  exec  lex.yy.c  mdc.cm  scanner.l  script.sh
docs/: compile_report.sh  modelo-relatorio-LabAOC.tex  referencias.bib  report-LabComp.tex
include/: assembly.h  binario.h  codInterm.h  global.h  label.h  memoria.h  parser.h  tabelaSimb.h
src/: arvore.c  assembly.c  binario.c  codInterm.c  funcoes_assembly.c  label.c  lexer.c  lexer.l  main.c  memoria.c  parser.c  parser.y  registradores.c  semantica.c
test_files/: keyboard_input.cm
test_files/LabRedes/: keyboard_input.cm  pong_game.cm  vga_keyboard_input.cm
test_files/SO/: fatorial_recursivo.cm  fibonacci.cm  modulo.cm  soma_funcao.cm
test_files/assembly/: entrada.cm  fibonacci.cm  jumpAndLink.cm  testeIf.cm
test_files/linguagemC/: fibonacci  fibonacci.c  gcd.c  sort
test_files/semantica/: teste_2.cm  teste_5.cm  teste_8.cm
testes/: mdc.cm  teste_SO.cm  testecomentario.cm
testes/SO/: calculo_media.cm  fatorial_iterativo.cm  modulo.cm  num_primo.cm  potencia.cm  soma_funcao.cm
testes/assembly/: parametros.cm
testes/linguagemC/: fatorial_iterativo.c  sort.c
testes/semantica/: teste_9.cm
tests/: CMakeLists.txt  test_example.c
